create api: update, remove, describe
