# pkg/note_v1/api.swagger.json
@@ -11,14 +11,80 @@
     "application/json"
   ],
   "paths": {
-    "/note/v1": {
+    "/note/v1/add": {
       "post": {
-        "operationId": "NoteV1_CreateNoteV1",
+        "operationId": "NoteV1_AddNoteV1",
         "responses": {
           "200": {
             "description": "A successful response.",
             "schema": {
-              "$ref": "#/definitions/note_v1CreateNoteV1Response"
+              "$ref": "#/definitions/note_v1AddNoteV1Response"
+            }
+          },
+          "default": {
+            "description": "An unexpected error response.",
+            "schema": {
+              "$ref": "#/definitions/runtimeError"
+            }
+          }
+        },
+        "tags": [
+          "NoteV1"
+        ]
+      }
+    },
+    "/note/v1/describe": {
+      "post": {
+        "operationId": "NoteV1_DescribeNoteV1",
+        "responses": {
+          "200": {
+            "description": "A successful response.",
+            "schema": {
+              "$ref": "#/definitions/note_v1DescribeNoteV1Response"
+            }
+          },
+          "default": {
+            "description": "An unexpected error response.",
+            "schema": {
+              "$ref": "#/definitions/runtimeError"
+            }
+          }
+        },
+        "tags": [
+          "NoteV1"
+        ]
+      }
+    },
+    "/note/v1/remove": {
+      "post": {
+        "operationId": "NoteV1_RemoveNoteV1",
+        "responses": {
+          "200": {
+            "description": "A successful response.",
+            "schema": {
+              "properties": {}
+            }
+          },
+          "default": {
+            "description": "An unexpected error response.",
+            "schema": {
+              "$ref": "#/definitions/runtimeError"
+            }
+          }
+        },
+        "tags": [
+          "NoteV1"
+        ]
+      }
+    },
+    "/note/v1/update": {
+      "post": {
+        "operationId": "NoteV1_UpdateNoteV1",
+        "responses": {
+          "200": {
+            "description": "A successful response.",
+            "schema": {
+              "properties": {}
             }
           },
           "default": {
@@ -35,10 +101,27 @@
     }
   },
   "definitions": {
-    "note_v1CreateNoteV1Response": {
+    "note_v1AddNoteV1Response": {
       "type": "object",
       "properties": {
         "note_id": {
+          "type": "string",
+          "format": "int64"
+        }
+      }
+    },
+    "note_v1DescribeNoteV1Response": {
+      "type": "object",
+      "properties": {
+        "user_id": {
+          "type": "string",
+          "format": "int64"
+        },
+        "classroom_id": {
+          "type": "string",
+          "format": "int64"
+        },
+        "document_id": {
           "type": "string",
           "format": "int64"
         }
